[gd_scene load_steps=12 format=3 uid="uid://yifalrmsjv8a"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://c3abnjfdh7jjl" path="res://graphics/ship.png" id="2"]
[ext_resource type="PackedScene" uid="uid://buuftkd8l2mih" path="res://scenes/laser.tscn" id="2_ml5qy"]
[ext_resource type="Texture2D" uid="uid://rkrk8b3ohla5" path="res://graphics/leftEngineShip.png" id="3"]
[ext_resource type="Texture2D" uid="uid://yfguytkc7s42" path="res://graphics/bothEngineShip.png" id="4"]
[ext_resource type="Texture2D" uid="uid://2n8t61qxgh7r" path="res://graphics/rightEngineShip.png" id="5"]

[sub_resource type="PhysicsMaterial" id="2"]
friction = 0.0

[sub_resource type="SpriteFrames" id="1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4")
}],
"loop": true,
"name": &"forward",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2")
}],
"loop": true,
"name": &"still",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3")
}],
"loop": true,
"name": &"turnLeft",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5")
}],
"loop": true,
"name": &"turnRight",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_xj2ih"]
colors = PackedColorArray(0.937146, 0.179704, 0.177293, 1, 0.749511, 0.697096, 7.70092e-07, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_o8b40"]
gradient = SubResource("Gradient_xj2ih")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_yhgcy"]
emission_shape = 1
emission_sphere_radius = 5.04
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
color_ramp = SubResource("GradientTexture1D_o8b40")

[node name="player" type="RigidBody2D" groups=["players"]]
collision_layer = 3
collision_mask = 3
mass = 100.0
inertia = 1000.0
center_of_mass_mode = 1
physics_material_override = SubResource("2")
gravity_scale = 0.0
continuous_cd = 2
max_contacts_reported = 20
contact_monitor = true
script = ExtResource("1")
laser_scene = ExtResource("2_ml5qy")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." groups=["players"]]
sprite_frames = SubResource("1")
animation = &"forward"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(0, 1)
build_mode = 1
polygon = PackedVector2Array(-28, 19, 28, 19, 0, -32)

[node name="Camera2D" type="Camera2D" parent="."]

[node name="RightParticles" type="GPUParticles2D" parent="."]
position = Vector2(12, 23)
process_material = SubResource("ParticleProcessMaterial_yhgcy")

[node name="LeftParticles" type="GPUParticles2D" parent="."]
position = Vector2(-13, 23)
process_material = SubResource("ParticleProcessMaterial_yhgcy")

[node name="Fire_Timer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_player_body_entered"]
[connection signal="timeout" from="Fire_Timer" to="." method="_on_fire_timer_timeout"]
